--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="shadow mb-2 bg-body-tertiary rounded">
+<div class="shadow mb-2 bg-body-tertiary rounded p-3">
     <div class="row w-100">
     <div class="col-1">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Kone_Logo_2023.svg/768px-Kone_Logo_2023.svg.png?20230711173653" class="img">
