--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -44,17 +44,17 @@
                 </tr>
             </tbody>
         </table>
-        <button (click)="save()">Save</button>
-        <button class="ms-2" (click)="export()">Export</button>
-       <label  class="importButton">Import
+        <button (click)="save()" class="btn btn-primary">Save</button>
+        <button class="ms-2 btn btn-primary" (click)="export()">Export</button>
+       <label  class="importButton" class="btn btn-primary ms-2">Import
         <input type="file" class="fileInput" (change)="fileImport($event)">
        </label>
     </div>
 </div>
-<div>
+<!-- <div>
     <button (click)="simply()">what</button>
 </div>
 <div>
     <button (click)="getMaterial()">get</button>
 </div>
-<button (click)="down()" class=" w-auto text-center">Download</button>
+ <button (click)="down()" class=" w-auto text-center">Download</button> --> <!--These are For implentation Of JWT and Object to XML -->
