--- a/src/app/order-info/order-info.component.html
+++ b/src/app/order-info/order-info.component.html
@@ -34,9 +34,9 @@
         </div>
     </div>
     </div>
-    <h1 class="ms-4 mt-3">Order Information</h1>
+    <h1 class="ms-4 mt-3 fs-3 fw-bold">Order Information</h1>
     <div class="container p-3 mb-5 bg-white text-dark shadow-sm p-3  bg-body rounded">
-            <h3>Site Structure path</h3>
+            <h3 class="fs-5">Site Structure path</h3>
         <hr>
         <div class="container">
           <div class="row">
@@ -105,12 +105,12 @@
     </div>
     </div>
     <div class="container p-3 mb-2 bg-white text-dark shadow-sm p-3 mb-5 bg-body rounded">
-        <h3>Group Information</h3>
+        <h3 class="fs-5">Group Information</h3>
         <hr>
         <div class="container mb-3">
           <div class="row">
             <div class="col w-50">
-            <h6 class="mb-3">DCS Product</h6>
+            <h6 class="mb-3 fs-6">DCS Product</h6>
             <div class="row">
             <select class="select rounded-pill form-control w-100 mb-3">
               <option>KONE Destination 1020</option>
@@ -119,7 +119,7 @@
             </div>
           
           <div class="row mb-5">
-        <h6>Group ID</h6>
+        <h6 class="fs-6">Group ID</h6>
             <input  class="rounded-pill form-control w-100">
           </div> 
             <div class="row ms-0">
@@ -136,12 +136,12 @@
              </div>
             </div>
     <div class="col w-auto">
-      <h6>DCS type</h6>
+      <h6 class="fs-6">DCS type</h6>
       <select class="rounded-pill w-100 form-control mb-3" disabled>
         <option>Traditional</option>
         <option>With options</option>
       </select>
-      <h6>DCS HW-type</h6>
+      <h6 class="fs-6">DCS HW-type</h6>
       <select class="rounded-pill w-100 form-control mb-3" disabled>
         <option>KCEGCH D1020</option>
         <option>With options</option>
@@ -152,12 +152,12 @@
         <option>Select</option>
         <option>With options</option>
       </select>
-      <h6>Zoned group</h6>
+      <h6 class="fs-6">Zoned group</h6>
       <select class="rounded-pill w-100 form-control">
         <option>Select</option>
         <option>With options</option>
       </select>
-      <h6>Pair of integrated groups</h6>
+      <h6 class="fs-6">Pair of integrated groups</h6>
       <select class="rounded-pill form-control w-100">
         <option>Select</option>
         <option>With options</option>
@@ -168,7 +168,7 @@
     </div>
       <div class="container p-3 mb-3 bg-white text-dark shadow-sm bg-body rounded">
         <div>
-          <h3>Engineering Information</h3>
+          <h3 class="fs-5">Engineering Information</h3>
         </div>
         <hr>
         <div class="container">
@@ -234,7 +234,7 @@
       </div>
       <div class="container p-3 mb-3 bg-white text-dark shadow-sm bg-body rounded">
         <div class="mb-3">
-          <h3>Project Information</h3>
+          <h3 class="fs-5">Project Information</h3>
         </div>
         <hr class="mb-3">
         <div class="container">
