--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="container bg-white mt-4">
-    <h5>Machinery area electrification cabling material</h5>
-    <h6>Material</h6>
+    <h5 class="fs-5 fw-bold">Machinery area electrification cabling material</h5>
+    <h6 class="fs-5">Material</h6>
     <div class="container">
         <table class="table table-bordered table-striped">
            <thead>
