--- a/src/app/box/box.component.html
+++ b/src/app/box/box.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h2 style="margin-left: 5%;">Hi</h2>
-    <h4 style="margin-left: 5%;">Fill Your Details</h4>
+    <h2 class="mt-3 fs-5">Hi</h2>
+    <h4 class="fs-6">Fill Your Details</h4>
     <form [formGroup]="index" enctype="multipart/form-data">
   <mat-form-field appearance="outline" class="exam" >
     <mat-label>Name</mat-label>
