--- a/src/app/delete/delete.component.html
+++ b/src/app/delete/delete.component.html
@@ -1,1 +1,6 @@
-<p>delete works!</p>
+<div class="con">
+    <h3>Are you sure ?</h3>
+    <button mat-raised-button color="primary" (click)="confirm()" [mat-dialog-close]="true">YES</button>
+    <button mat-button color="warn" class="cancel" [mat-dialog-close]="true">NO</button>
+    </div>
+    
